# python-project-lvl4

./: .coverage  .gitignore  Makefile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt  requirements.txt.py
.github/workflows/: main.yml
staticfiles/: staticfiles.json
task_manager/: .urls.py.swp  settings.py  urls.py  views.py
task_manager/templates/: index.html  index_without_bootsrap.html  label_create_form.html  label_delete_form.html  label_update_form.html  label_view.html  labels_index.html  login.html  login.html:Zone.Identifier  status_create_form.html  status_delete_form.html  status_update_form.html  status_view.html  statuses_index.html
tasks/: admin.py  filters.py  models.py  task_filter.html  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_auto_20210212_1533.py  0002_auto_20210219_0816.py  0002_auto_20210222_1824.py  0002_auto_20210222_1950.py  0002_remove_task_label.py  0003_auto_20210212_1535.py  0003_auto_20210220_0752.py  0003_auto_20210222_1958.py  0003_task_label.py  0004_auto_20210212_1925.py  0004_auto_20210217_1616.py  0004_auto_20210220_0817.py  0004_auto_20210223_0843.py  0005_auto_20210213_1236.py  0005_auto_20210217_1618.py  0005_auto_20210220_0819.py  0005_auto_20210223_0917.py  0006_auto_20210214_1246.py  0006_auto_20210217_1619.py  0006_auto_20210220_0819.py  0006_auto_20210223_0928.py  0007_auto_20210215_2007.py  0007_auto_20210217_1620.py  0007_auto_20210220_0846.py  0007_auto_20210223_0942.py  0008_auto_20210220_1510.py  (+1 more)
users/: .views.py.swp  forms.py  models.py  tests.py  urls.py  views.py
(+31 files in other folders)
